TL-7367 appraisals: Fixed layout issue when managing a page
Reviewed-on: https://review.totaralms.com/9008
Tested-by: Jenkins Automation <jenkins@totaralms.com>

--- a/totara/appraisal/styles.css
+++ b/totara/appraisal/styles.css
@@ -40,6 +40,10 @@ div.appraisal-content .fitem.fitem_fgroup {
   padding: 0;
 }
 
+#fgroup_id_addquestgroup:after {
+    clear: none;
+}
+
 ul.appraisal-page-list,
 ul.appraisal-quest-list {
     list-style-type:none;
